--- a/icons.qrc
+++ b/icons.qrc
@@ -24,6 +24,7 @@
   <file alias="script-e">icons/script-attribute-e.png</file>
   <file alias="script-i">icons/script-attribute-i.png</file>
   <file alias="script-p">icons/script-attribute-p.png</file>
+  <file alias="help">icons/lifebuoy.png</file>
 </qresource>
 </RCC>
 
